@@ -1,9 +1,14 @@
+07/09/2011 Changes
+
+Adjusted snapshot version number.
+
 
 06/09/2011 Changes
 
 Pulled contribution. Now supporting Maven.
 Modified maven pom to copy across 'extras' into target/redline-deploy/extras.
 Changed runtime path to match where maven puts the runtime soruces.
+Added reserved word Smalltalk and associated SmalltalkImage class.
 
 
 03/09/2011 Changes
